add dataset article

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,16 +36,15 @@
         <table>
             <thead>
                 <tr>
-                    <th>Titre de l'article</th>
+                    <th>Title</th>
                     <th>Date</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="#">Création d'un dataset multimodal chez JustAI</a></td>
+                    <td><a href="articles/dataset/dataset_blog_en.html">Création d'un dataset multimodal chez JustAI</a></td>
                     <td>Octobre 2024</td>
                 </tr>
-                <!-- Ajoute ici d'autres articles -->
             </tbody>
         </table>
     </section>
@@ -55,19 +54,48 @@
         <h2>
             CV
         </h2>
-        <div class="texte", id="education">
+        <!-- Sous section Education du CV -->
+        <section id="education">
             <h3>
-                Eductation
+                Education
             </h3>
-            <p>
-            </p>
-        </div>
-        
-        <div class="texte", id="project">
+                <ul>
+                    <li>
+                        <b>ENS Paris Saclay - MVA </b> - 2024/2025
+                        <div class="course_description">
+                            ALTEGRAD (NLP), Medical Image Analysis, learning for protein science, Deep Learning for medical imaging
+                        </div>
+                    </li>
+                    <li>
+                        <b>Télécom Paris - MS IA (3rd year engineer)</b> - 2024/2025
+                        <div class="course_description">
+                            Deep Learning, NLP, Advancend Probabilities, Reinforcement Learning.
+                        </div>
+                    </li>
+                    <li>
+                        <b>Polytechnique Montréal - AI Track</b> - 2023/2024
+                        <div class="course_description">
+                            NLP, Image Analysis, Machine Learning, Mathematics for Deep Learning
+                        </div>
+                    </li>
+                    <li>
+                        <b>Télécom SudParis - 1st and 2nd year engineer</b> - 2022/2024
+                        <div class="course_description">
+                            Signal Processing, , Image Analysis, Java, Software Developpement, <br>
+                            Machine Learning, Complexe Analysis, Probabilities and Statistics
+                        </div>
+                    </li>
+                </ul>
+        </section>
+
+        <!-- Sous section Projet du CV -->
+        <section id="project">
             <h3>
                 Project
             </h3>
             <p>
+                Semantic segmentation of tumors on MRI via UnET/ViT (Brats Dataset).<br>
+                ResNet fine-tuning for Covid-19 detection on chest x-ray. <br>
             </p>
         </div>
     </section>
