--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
 
     <!-- Section de présentation avec photo à gauche -->
     <section id="presentation">
@@ -44,6 +44,9 @@
                 <tr>
                     <td><a href="articles/dataset/dataset_blog_en.html">Création d'un dataset multimodal chez JustAI</a></td>
                     <td>Octobre 2024</td>
+                </tr>
+                <tr>
+                    <td><a href="articles/vae/vae_blog_en.html">Understand image generation with VAE</a></td>
                 </tr>
             </tbody>
         </table>
