center items on index.html

--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
 
     <!-- Section de présentation avec photo à gauche -->
     <section id="presentation">
+        <div class="presentation-title">
+            <h1>Alexandre Myara</h1>
+            <h2>Deep Learning student @ Telecom Paris | MVA</h2>
+        </div>
         <div class="presentation-container">
-            <div class="photo">
                 <img src="photo-alexandre-myara.png" alt="Photo d'Alexandre Myara">
-            </div>
-            <div class="texte">
-                <h1>Alexandre Myara</h1>
-                <h2>Deep Learning student @ Telecom Paris | MVA</h2>
+
                 <p>
-                    Hello there ! I am in my last year at <a href="telecom-paris.com">Telecom ParisTech</a> in MS AI where I am studing
+                    Hello there ! I am in my last year of AI engineering study at <a href="https://www.telecom-paris.fr/fr/masteres-specialises/formation-intelligence-artificielle">Telecom ParisTech</a> in MS AI where I am studing
                     deep learning (mainly NLP and Computer Vision). <br>
-                    At the same time, I follow NLP and medical imaging courses at <a>ENS Paris Saclay</a> 
+                    At the same time, I follow NLP and medical imaging courses at <a href="https://www.master-mva.com/">ENS Paris Saclay</a> 
                     in the Master of Science MVA (Mathematic Vision Apprentissage).<br>
                     I am curently working on a project of image generation for semantic segmentation of cardiac radiographies with Telecom Paris Deep Learning Departement.<br>
                     In parallel, I am seeking a 6 months internship in deep learning applied in biology or in medical domains.
                 </p>
-            </div>
         </div>
     </section>
 
@@ -42,7 +41,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="articles/dataset/dataset_blog_en.html">Création d'un dataset multimodal chez JustAI</a></td>
+                    <td><a href="articles/dataset/dataset_blog_en.html">How to construct multimodal datasets effeciently ?</a></td>
                     <td>Aug 2024</td>
                 </tr>
                 <tr>
@@ -85,7 +84,7 @@
                     <li>
                         <b>Télécom SudParis - 1st and 2nd year engineer</b> - 2022/2024
                         <div class="course_description">
-                            Signal Processing, , Image Analysis, Java, Software Developpement, <br>
+                            Signal Processing, Image Analysis, Java, Software Developpement, <br>
                             Machine Learning, Complexe Analysis, Probabilities and Statistics
                         </div>
                     </li>
