--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
                     <li>
                         <b>Télécom Paris - MS IA (3rd year engineer)</b> - 2024/2025
                         <div class="course_description">
-                            Deep Learning, NLP, Advancend Probabilities, Reinforcement Learning.
+                            Deep Learning, NLP, Advanced Probabilities, Reinforcement Learning.
                         </div>
                     </li>
                     <li>
