update presentation section

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="presentation-container">
                 <img src="photo-alexandre-myara.png" alt="Photo d'Alexandre Myara">
 
-                <p>
-                    Hello there ! I am in my last year of AI engineering study at <a href="https://www.telecom-paris.fr/fr/masteres-specialises/formation-intelligence-artificielle">Telecom ParisTech</a> in MS AI where I am studing
-                    deep learning (mainly NLP and Computer Vision). <br>
-                    At the same time, I follow NLP and medical imaging courses at <a href="https://www.master-mva.com/">ENS Paris Saclay</a> 
-                    in the Master of Science MVA (Mathematic Vision Apprentissage).<br>
-                    I am curently working on a project of image generation for semantic segmentation of cardiac radiographies with Telecom Paris Deep Learning Departement.<br>
-                    In parallel, I am seeking a 6 months internship in deep learning applied in biology or in medical domains.
-                </p>
+            <p>
+                Hello there! I am an AI engineer graduate from Télécom SudParis and the MS in AI at Télécom Paris.
+                I also attended to the ENS–Dauphine M2 IASD (Mathematics).
+                I’m interested in research on representation learning and generative modeling.
+                I worked at ENS Paris in the Biocomputation team, where I developed a representation learning method
+                to disentangle the latent space.
+                Today, I’m looking for a PhD position in generative modeling or representation learning!
+            </p>
         </div>
     </section>
 
@@ -41,6 +41,10 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td><a href="articles/dataset/dataset_blog_en.html">How to construct multimodal datasets effeciently ?</a></td>
+                    <td>Aug 2024</td>
+                </tr>
                 <tr>
                     <td><a href="articles/dataset/dataset_blog_en.html">How to construct multimodal datasets effeciently ?</a></td>
                     <td>Aug 2024</td>
