--- a/public/index.html
+++ b/public/index.html
@@ -41,19 +41,19 @@
     <section id="presentation">
         <div class="presentation-title">
             <h1>Alexandre Myara</h1>
-            <h2>Deep Learning student @ Telecom Paris</h2>
+            <h2>Deep Learning engineer</h2>
         </div>
         <div class="presentation-container">
                 <img src="/image/index/photo-alexandre-myara.png" alt="Photo d'Alexandre Myara">
 
-                <p>
-                    Hello there ! I am in my last year of AI engineering study at <a href="https://www.telecom-paris.fr/fr/masteres-specialises/formation-intelligence-artificielle">Telecom ParisTech</a> in MS AI where I am studing
-                    deep learning (mainly NLP and Computer Vision). <br>
-                    At the same time, I follow NLP and medical imaging courses at <a href="https://www.master-mva.com/">ENS Paris Saclay</a> 
-                    in the Master of Science MVA (Mathematic Vision Apprentissage).<br>
-                    I am curently working on a project of image generation for semantic segmentation of cardiac radiographies with Telecom Paris Deep Learning Departement.<br>
-                    In parallel, I am seeking a 6 months internship in deep learning applied in biology or in medical domains.
-                </p>
+            <p>
+                Hello there! I am an AI engineer graduate from Télécom SudParis and the MS in AI at Télécom Paris.
+                I also attended to the ENS–Dauphine M2 IASD (Mathematics).
+                I’m interested in research on representation learning and generative modeling.
+                I worked at ENS Paris in the Biocomputation team, where I developed a representation learning method
+                to disentangle the latent space.
+                Today, I’m looking for a PhD position in generative modeling or representation learning!
+            </p>
         </div>
     </section>
 
@@ -68,6 +68,10 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td><a href="https://alexandremyara.github.io/posts/gen_transport/">Generative Modeling through transport theory</a></td>
+                    <td>Mar 2026</td>
+                </tr>
                 <tr>
                     <td><a href="https://alexandremyara.github.io/posts/vae_blog_en/">Understand image generation with VAE</a></td>
                     <td>Oct 2024</td>
@@ -92,9 +96,9 @@
             </h3>
                 <ul>
                     <li>
-                        <b>ENS Paris Saclay - MVA </b> - 2024/2025
+                        <b>ENS Paris/Dauphine - IASD Math </b> - 2024/2025
                         <div class="course_description">
-                            ALTEGRAD (NLP), Medical Image Analysis, learning for protein science, Deep Learning for medical imaging
+                            Bayesian Statistics, Learning Theory, Optimal Transport
                         </div>
                     </li>
                     <li>
@@ -125,6 +129,7 @@
                 Project
             </h3>
             <p>
+                XFactors: build a disentangled latent space with toy and real-world datasets<br>
                 NVAE and 
                 Semantic segmentation of tumors on MRI via UnET/ViT (Brats Dataset).<br>
                 ResNet fine-tuning for Covid-19 detection on chest x-ray. <br>
